before lunch Tuesday

--- a/06_Inheritance_Classes/06_Inheritance_Classes.csproj
+++ b/06_Inheritance_Classes/06_Inheritance_Classes.csproj
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="Animal.cs" />
     <Compile Include="Cat.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
