after lunch tuesday

--- a/06_Inheritance_Tests/06_Inheritance_Tests.csproj
+++ b/06_Inheritance_Tests/06_Inheritance_Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CatTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PersonTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
