--- a/07_RepositoryPattern_Tests/07_RepositoryPattern_Tests.csproj
+++ b/07_RepositoryPattern_Tests/07_RepositoryPattern_Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="StreamingContentRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StreamingContentTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
