--- a/07_RepositoryPattern_Repository/07_RepositoryPattern_Repository.csproj
+++ b/07_RepositoryPattern_Repository/07_RepositoryPattern_Repository.csproj
@@ -46,6 +46,7 @@
     <Compile Include="StreamingContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreamingContentRepository.cs" />
+    <Compile Include="StreamingRepositorycs.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
