before lunch ui

--- a/08_StreamingContent_Console/08_StreamingContent_Console.csproj
+++ b/08_StreamingContent_Console/08_StreamingContent_Console.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\07_RepositoryPattern_Repository\07_RepositoryPattern_Repository.csproj">
+      <Project>{C15C62CE-E03B-4937-9456-CE23AB91F354}</Project>
+      <Name>07_RepositoryPattern_Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
